# MarkovRCnet

./: .gitignore  Dockerfile  Dockerfile.jupyter  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/markovrcnet/: __init__.py  datasets.py
src/markovrcnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/markovrcnet/data/: generate_figures.py  generate_scalefree.py  scalefree.mtx
src/markovrcnet/io/: __init__.py  load_matrix.py  save_matrix.py
src/markovrcnet/mcl/: __init__.py  core.py
src/markovrcnet/mif/: __init__.py  mif.py
src/markovrcnet/utils/: __init__.py  adjmatrix.py  colab.py  logging.py  pyg.py  sparse.py
tests/: test_import.py  test_mcl.py  test_mif.py  test_mif_broadcast.py  test_mifdi.py  test_rmcl.py  test_rmcl_mixedmcl.py  test_rmcl_srmcl.py
