[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "markovrcnet"
version = "1.1.5"
description = "Markov Random Chain Network utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "scikit-learn",
]

[project.optional-dependencies]
gnn = [
    "torch",
    "torch-geometric",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
markovrcnet = ["data/*.mtx"]
